--- a/backend/Directory.Build.targets
+++ b/backend/Directory.Build.targets
@@ -22,6 +22,19 @@
   </ItemGroup>
 
   <ItemGroup>
+      <PackageReference Update="FluentAssertions" Version="6.12.0" />
+      <PackageReference Update="LeanCode.CQRS.AspNetCore" Version="$(CoreLibVersion)" />
+      <PackageReference Update="LeanCode.IntegrationTestHelpers" Version="$(CoreLibVersion)" />
+      <PackageReference Update="LeanCode.Startup.MicrosoftDI" Version="$(CoreLibVersion)" />
+      <PackageReference Update="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EFCoreVersion)" />
+      <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+      <PackageReference Update="NSubstitute" Version="5.1.0" />
+      <PackageReference Update="xunit" Version="2.5.3" />
+      <PackageReference Update="xunit.runner.visualstudio" Version="2.5.3" />
+      <PackageReference Update="coverlet.collector" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="SerilogAnalyzer" Version="0.15.0" />
     <PackageReference Update="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="3.3.4" />
   </ItemGroup>
