--- a/backend/Directory.Build.targets
+++ b/backend/Directory.Build.targets
@@ -23,6 +23,7 @@
 
   <ItemGroup>
       <PackageReference Update="FluentAssertions" Version="6.12.0" />
+      <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.7.2" />
       <PackageReference Update="LeanCode.CQRS.AspNetCore" Version="$(CoreLibVersion)" />
       <PackageReference Update="LeanCode.IntegrationTestHelpers" Version="$(CoreLibVersion)" />
       <PackageReference Update="LeanCode.Startup.MicrosoftDI" Version="$(CoreLibVersion)" />
