--- a/backend/Directory.Build.targets
+++ b/backend/Directory.Build.targets
@@ -11,6 +11,7 @@
     <PackageReference Update="LeanCode.CQRS.AspNetCore" Version="$(CoreLibVersion)" />
     <PackageReference Update="LeanCode.CQRS.Execution" Version="$(CoreLibVersion)" />
     <PackageReference Update="LeanCode.CQRS.Validation.Fluent" Version="$(CoreLibVersion)" />
+    <PackageReference Update="LeanCode.DomainModels.EF" Version="$(CoreLibVersion)" />
     <PackageReference Update="LeanCode.TimeProvider" Version="$(CoreLibVersion)" />
   </ItemGroup>
 
@@ -18,6 +19,7 @@
     <PackageReference Update="FluentValidation" Version="11.5.1" />
     <PackageReference Update="Microsoft.EntityFrameworkCore" Version="$(EFCoreVersion)" />
     <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="$(EFCoreVersion)" />
+    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageReference Update="Serilog" Version="3.0.1" />
   </ItemGroup>
 
