--- a/backend/tests/LeanCode.AppRating.IntegrationTests/LeanCode.AppRating.IntegrationTests.csproj
+++ b/backend/tests/LeanCode.AppRating.IntegrationTests/LeanCode.AppRating.IntegrationTests.csproj
@@ -8,10 +8,12 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" />
     <PackageReference Include="LeanCode.CQRS.AspNetCore" />
+    <PackageReference Include="LeanCode.DomainModels.EF" />
     <PackageReference Include="LeanCode.IntegrationTestHelpers" />
     <PackageReference Include="LeanCode.Startup.MicrosoftDI" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
