--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -115,19 +115,19 @@ jobs:
           name: test_results.zip
           path: backend/TestResults/*.trx
       - name: Pack AppRating Contracts
-        if: ${{ needs.prepare.outputs.publish_artifacts == '1' }}
+        if: ${{ steps.version.outputs.publish_artifacts == '1' }}
         env:
           BUILD_VERSION: ${{ steps.version.outputs.version }}
         run: dotnet pack --no-build -c Release -p:Version=$BUILD_VERSION
         working-directory: ./backend/src/LeanCode.AppRating.Contracts
       - name: Pack AppRating
-        if: ${{ needs.prepare.outputs.publish_artifacts == '1' }}
+        if: ${{ steps.version.outputs.publish_artifacts == '1' }}
         env:
           BUILD_VERSION: ${{ steps.version.outputs.version }}
         run: dotnet pack --no-build -c Release -p:Version=$BUILD_VERSION
         working-directory: ./backend/src/LeanCode.AppRating
       - name: Publish to Feedz
-        if: ${{ needs.prepare.outputs.publish_artifacts == '1' }}
+        if: ${{ steps.version.outputs.publish_artifacts == '1' }}
         run: |
           dotnet nuget push \
             "src/LeanCode.AppRating.Contracts/bin/Release/LeanCode.AppRating.Contracts.${BUILD_VERSION}.nupkg" \
@@ -139,7 +139,7 @@ jobs:
           BUILD_VERSION: ${{ steps.version.outputs.version }}
           FEEDZ_API_KEY: ${{ secrets.FEEDZ_API_KEY }}
       - name: Publish to Nuget
-        if: ${{ needs.prepare.outputs.publish_nuget == '1' }}
+        if: ${{ steps.version.outputs.publish_nuget == '1' }}
         run: |
           dotnet nuget push \
             "src/LeanCode.AppRating.Contracts/bin/Release/LeanCode.AppRating.Contracts.${BUILD_VERSION}.nupkg" \
