--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -3,6 +3,7 @@ description: >
   Gather feedback with a 5-star rating or Yes/No survey. Includes device analytics and
   app store rating prompts for positive reviews.
 repository: https://github.com/leancodepl/app-rating
+homepage: https://github.com/leancodepl/app-rating/tree/main/mobile
 version: 0.0.1
 
 library:
