--- a/.github/workflows/leancode_app_rating-test.yml
+++ b/.github/workflows/leancode_app_rating-test.yml
@@ -57,4 +57,4 @@ jobs:
 
       - uses: codecov/codecov-action@v1
         with:
-          flags: leancode_hooks
+          flags: leancode_app_rating
