Fix formatting in YAML add test badge in readme

--- a/.github/workflows/leancode_app_rating-publish.yml
+++ b/.github/workflows/leancode_app_rating-publish.yml
@@ -2,7 +2,7 @@ name: leancode_app_rating publish
 
 on:
   push:
-    tags: ["leancode_app_rating-v*"]
+    tags: ['leancode_app_rating-v*']
 
 jobs:
   publish:
