--- a/mobile/l10n.yaml
+++ b/mobile/l10n.yaml
@@ -1,4 +1,5 @@
-arb-dir: lib/l10n
+arb-dir: lib/src/l10n
+output-dir: lib/src/l10n
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 output-class: AppRatingLocalizations
