--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,12 +15,12 @@ dependencies:
     sdk: flutter
   bloc_presentation: ^1.0.0
   cqrs: ^10.0.1
+  equatable: ^2.0.7
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
   in_app_review: ^2.0.8
   leancode_hooks: ^0.0.6
   leancode_contracts: ^0.8.0
-  freezed_annotation: ^2.4.1
   intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
@@ -30,7 +30,6 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.13
   flutter_lints: ^2.0.0
-  freezed: ^2.5.7
   leancode_contracts_generator: ^0.12.0
 
 flutter:
