--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -4,33 +4,33 @@ description: >
   app store rating prompts for positive reviews.
 repository: https://github.com/leancodepl/app-rating
 homepage: https://github.com/leancodepl/app-rating/tree/main/mobile
-version: 0.0.3
+version: 0.0.4
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
   flutter: ">=3.22.0"
 
 dependencies:
+  bloc_presentation: ^1.1.0
+  cqrs: ^10.0.2
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
-  bloc_presentation: ^1.0.0
-  cqrs: ^10.0.1
-  equatable: ^2.0.7
-  google_fonts: ^6.1.0
-  flutter_bloc: ^8.1.3
-  in_app_review: ^2.0.8
-  leancode_hooks: ^0.0.6
-  leancode_contracts: ^0.8.0
-  intl: ^0.19.0
+  flutter_bloc: ^9.1.0
   flutter_localizations:
     sdk: flutter
+  google_fonts: ^6.2.1
+  in_app_review: ^2.0.10
+  intl: ^0.19.0
+  leancode_contracts: ^0.8.0
+  leancode_hooks: ^0.1.1
 
 dev_dependencies:
+  build_runner: ^2.4.13
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.13
-  flutter_lints: ^2.0.0
-  leancode_contracts_generator: ^0.12.0
+  leancode_contracts_generator: ^0.13.0
+  leancode_lint: ^15.0.0
 
 flutter:
   assets:
