--- a/backend/Directory.Build.targets
+++ b/backend/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
-    <CoreLibVersion>9.0.2542-preview</CoreLibVersion>
-    <EFCoreVersion>9.0.0</EFCoreVersion>
+    <CoreLibVersion>10.0.2709-preview</CoreLibVersion>
+    <EFCoreVersion>10.0.0-rc.2.25502.107</EFCoreVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,25 +19,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FluentValidation" Version="11.11.0" />
-    <PackageReference Update="MassTransit" Version="8.3.2" />
+    <PackageReference Update="FluentValidation" Version="12.1.0" />
+    <PackageReference Update="MassTransit" Version="8.5.5" />
     <PackageReference Update="Microsoft.EntityFrameworkCore" Version="$(EFCoreVersion)" />
     <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="$(EFCoreVersion)" />
-    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
-    <PackageReference Update="Serilog" Version="4.1.0" />
+    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
+    <PackageReference Update="Serilog" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-      <PackageReference Update="FluentAssertions" Version="7.0.0" />
+      <PackageReference Update="FluentAssertions" Version="7.2.0" />
       <PackageReference Update="LeanCode.CQRS.AspNetCore" Version="$(CoreLibVersion)" />
       <PackageReference Update="LeanCode.IntegrationTestHelpers" Version="$(CoreLibVersion)" />
       <PackageReference Update="LeanCode.Startup.MicrosoftDI" Version="$(CoreLibVersion)" />
       <PackageReference Update="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EFCoreVersion)" />
-      <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+      <PackageReference Update="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
       <PackageReference Update="NSubstitute" Version="5.3.0" />
-      <PackageReference Update="xunit" Version="2.9.2" />
-      <PackageReference Update="xunit.runner.visualstudio" Version="2.8.2" />
-      <PackageReference Update="coverlet.collector" Version="6.0.2" />
+      <PackageReference Update="xunit" Version="2.9.3" />
+      <PackageReference Update="xunit.runner.visualstudio" Version="3.1.5" />
+      <PackageReference Update="coverlet.collector" Version="6.0.4" />
   </ItemGroup>
 
   <ItemGroup>
