--- a/backend/Directory.Build.targets
+++ b/backend/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
-    <CoreLibVersion>10.0.2709-preview</CoreLibVersion>
-    <EFCoreVersion>10.0.0-rc.2.25502.107</EFCoreVersion>
+    <CoreLibVersion>10.0.2808-preview</CoreLibVersion>
+    <EFCoreVersion>10.0.1</EFCoreVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,10 +20,10 @@
 
   <ItemGroup>
     <PackageReference Update="FluentValidation" Version="12.1.0" />
-    <PackageReference Update="MassTransit" Version="8.5.5" />
+    <PackageReference Update="MassTransit" Version="8.5.7" />
     <PackageReference Update="Microsoft.EntityFrameworkCore" Version="$(EFCoreVersion)" />
     <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="$(EFCoreVersion)" />
-    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
+    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     <PackageReference Update="Serilog" Version="4.3.0" />
   </ItemGroup>
 
